sort.basic.bubble.AlgBubbleSort3.scala.error
Erreur de compilation :
AlgBubbleSort3:4: error: type mismatch;
 found   : Unit
 required: Boolean
  while (fin=true){
            ^